@@ -27,6 +27,7 @@ v 7.4.0
   - New milestone and label links on issue edit form
   - Improved repository graphs
   - Improve event note display in dashboard and project activity views (Vinnie Okada)
+  - API: Add support for Hipchat (Kevin Houdebert)
 
 v 7.3.2
   - Fix creating new file via web editor
